refactor : 쿼리 수정 / 위시플레이스 파트너 엔드포인트 생성